[package]
name = "tcal"
version = "0.1.0"
edition = "2024"

[dependencies]
#async-openai = "0.29.0"
futures = "0.3.31"
rand = "0.8.5"
time = {version = "0.3.41", features = ["parsing", "macros", "formatting", "local-offset"]}
tokio = { version = "1.45.1", features = ["full"] }

ollama-rs = {version = "0.3.2", features = ["macros"]}
schemars = { version = "1.0.4", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
